asm-config/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-internal-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
    # kubernetes.io/ingress.regional-static-ip-name: "internal-lb-ip"
    # ingress.gcp.kubernetes.io/pre-shared-cert: "cert-mesh-tls"
    # kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: istio-ingressgateway
      port:
        number: 443
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 443
